# big-ecp

./: CMakeLists.txt  LICENSE  README.md
benchmark/: Dockerfile.ecp  algos.yaml  ecp-t2.py
include/ecp/: ecp.hpp  index.hpp  query.hpp
main/: CMakeLists.txt  main.cpp
scripts/: copy_files.sh  gen_wrapper.sh
src/: CMakeLists.txt  CMakeLists.txt_old  assignment.cpp  assignment.hpp  datastructure.cpp  datastructure.hpp  datastructures.cpp  datastructures.hpp  distance.cpp  distance.hpp  ecp.cpp  index.cpp  index.hpp  main.cpp  preprocessing.cpp  preprocessing.hpp  query.cpp  query.hpp  queryprocessing.cpp  queryprocessing.hpp
swig/: CMakeLists.txt  ecp.i
